--- a/MEAB/Views/Home/Index.cshtml
+++ b/MEAB/Views/Home/Index.cshtml
@@ -3,9 +3,16 @@
 }
 
 <div class="jumbotron">
-    <h1>MEAB</h1>
-    <p class="lead">Create and manage armies to conquer Middle Earth!</p>
-    <p><a href="@Url.Action("Create","ArmyLists")" class="btn btn-primary btn-lg">Build a List</a></p>
+    <div class="row">
+        <div class="col-md-6">
+            <h1>MEAB</h1>
+            <p class="lead">Create and manage armies to conquer Middle Earth!</p>
+            <p><a href="@Url.Action("Create","ArmyLists")" class="btn btn-primary btn-lg">Build a List</a></p>
+        </div>
+        <div class="col-md-6">
+            <img class="img-responsive img-rounded" src="~/Content/Images/silmarillion__fall_of_gondolin_by_ladyelleth.png" />
+        </div>
+    </div>
 </div>
 
 <div class="row">
